--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,8 +1,49 @@
 // Main stylesheet
 
-@import 'bourbon.scss';
-@import 'neat.scss';
+@import '/bower_components/normalize-css/normalize.css';
+@import 'bourbon';
+@import 'neat';
+
+$color-white: #fff;
+
+// Bourbon Config
+
+
+// Type -----------------------------------------------------------------------
+
+html { font-size: 1em; } // 16px
 
 body {
-	background: #ff0;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background-color: $color-white;
+	font-family: Roboto, sans-serif;
+	font-weight: normal;
+	line-height: 1.45;
+	color: #333;
+}
+
+p {margin-bottom: 1.3em;}
+
+// Augmented fourth - 1.414
+h1, h2, h3, h4 {
+	margin: 1.414em 0 0.5em;
+	font-weight: 700;
+	line-height: 1.2;
+}
+
+h1 {
+	font-size: 3.998em;
+}
+
+h2 {font-size: 2.827em;}
+
+h3 {font-size: 1.999em;}
+
+h4 {font-size: 1.414em;}
+
+small, .font_small {font-size: 0.707em;}
+
+.container {
+	@include outer-container;
 }
