--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -10,9 +10,10 @@ $color-grey-dark: #333;
 // Bourbon Config
 
 
-// Type -----------------------------------------------------------------------
+// Type ---------------------------------------------------
 
-$modular-scale-ratio: $golden;
+// $modular-scale-ratio: $golden;
+$modular-scale-ratio: $augmented-fourth;
 // $modular-scale-base: 1em;
 
 html { font-size: 1em; } // 16px
@@ -45,6 +46,38 @@ h4 { font-size: modular-scale(1); }
 
 small { font-size: modular-scale(-1);}
 
+// Grid ---------------------------------------------------
 .container {
 	@include outer-container;
+}
+
+// Splash -------------------------------------------------
+#splash {
+	color: #fff;
+	h1 {
+		font-size: modular-scale(2);
+		font-weight: normal;
+		span {
+			font-weight: 700;
+		}
+	}
+	h2 {
+		font-size: modular-scale(4);
+		font-weight: 100;
+		margin-top: 0;
+	}
+}
+.bgvid { 
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	min-width: 100%;
+	min-height: 100%;
+	width: auto;
+	height: auto;
+	z-index: -100;
+	-webkit-transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-50%);
+	background: url(polina.jpg) no-repeat;
+	background-size: cover; 
 }
