--- a/assets/styles/typography/_headings.scss
+++ b/assets/styles/typography/_headings.scss
@@ -1,3 +1,17 @@
 h1, h2, h3, h4, h5, h6 {
+	margin: 1em 0 0.5em;
+	font-weight: 700;
+	line-height: 1.2;
 	clear: both;
 }
+
+h1 { font-size: modular-scale(4); }
+
+h2 { font-size: modular-scale(3); }
+
+h3 { font-size: modular-scale(2); }
+
+h4 { font-size: modular-scale(1); }
+
+small { font-size: modular-scale(-1); }
+
