--- a/assets/styles/typography/_typography.scss
+++ b/assets/styles/typography/_typography.scss
@@ -1,3 +1,10 @@
+html {
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+p { margin-bottom: 1em; }
+
 body,
 button,
 input,
@@ -5,7 +12,7 @@ select,
 textarea {
 	color: $color__text-main;
 	font-family: $font__main;
-	@include font-size(1);
+	@include font-size(1); // 16px
 	line-height: $font__line-height-body;
 }
 
