basic Neat grid stuff. Not mobile first though

--- a/assets/styles/layout/_layout.scss
+++ b/assets/styles/layout/_layout.scss
@@ -1,11 +1,4 @@
-.site-content {
-	@include outer-container;
-}
-.content-area {
-	background:#f00;
-	@include span-columns(8);
-}
-.widget-area {
-	background:#0f0;
-	@include span-columns(4);
-}
+// .site-header, .site-content {
+// 	@include outer-container;
+// }
+
