mobile first basics

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -4,9 +4,10 @@
 @import 'bourbon';
 @import 'neat-helpers';
 
+$grid-columns: 4 !global;
 $modular-scale-ratio: $augmented-fourth;
 $max-width: em(1170);
-$mobile: new-breakpoint(max-width 37.5em 4);
+$desktop: new-breakpoint(min-width 37.5em 12);
 $visual-grid: true;
 
 @import 'neat';
