--- a/assets/styles/navigation/_menus.scss
+++ b/assets/styles/navigation/_menus.scss
@@ -6,8 +6,12 @@ p.site-title {
 	display: block;
 	background: #000;
 	color: #fff;
-	width: 80px;
-	height: 60px;
+	padding: 10px 20px;
+	text-decoration: none;
+	&:before {
+		font: normal normal normal 32px/1 'kanec-icons'; 
+		content: '\EA01'; 
+	}
 	span { display: none; }
 }
 .main-navigation {
