--- a/assets/styles/site/_front-page.scss
+++ b/assets/styles/site/_front-page.scss
@@ -13,17 +13,17 @@
 		margin-top: 0;
 	}
 }
-.bgvid { 
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	min-width: 100%;
-	min-height: 100%;
-	width: auto;
-	height: auto;
-	z-index: -100;
-	-webkit-transform: translateX(-50%) translateY(-50%);
-	transform: translateX(-50%) translateY(-50%);
-	background: url(polina.jpg) no-repeat;
-	background-size: cover; 
+.video-bg {
+	video { 
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		width: auto;
+		height: 100vh;
+		z-index: -100;
+		-webkit-transform: translateX(-50%) translateY(-50%);
+		transform: translateX(-50%) translateY(-50%);
+		background: url(polina.jpg) no-repeat;
+		background-size: cover; 
+	}
 }
