--- a/assets/styles/site/_front-page.scss
+++ b/assets/styles/site/_front-page.scss
@@ -1,5 +1,15 @@
-#splash {
+.splash {
+	width: 100%;
+	height: 100vh;
 	color: #fff;
+	display: table;
+	.inner {
+		display: table-cell;
+		vertical-align: middle;
+	}
+	.container {
+		padding: $gutter;
+	}
 	h1 {
 		font-size: modular-scale(2);
 		font-weight: normal;
@@ -14,15 +24,18 @@
 	}
 }
 .video-bg {
+	position: absolute;
+	overflow: hidden;
+	top: 0;
+	left: 0;
+	z-index: -100;
+	width: 100%;
+	height: 100vh;
+	background: #f00;
 	video { 
-		position: absolute;
-		top: 50%;
-		left: 50%;
 		width: auto;
-		height: 100vh;
-		z-index: -100;
-		-webkit-transform: translateX(-50%) translateY(-50%);
-		transform: translateX(-50%) translateY(-50%);
+		min-width: 100%;
+		min-height: 100vh;
 		background: url(polina.jpg) no-repeat;
 		background-size: cover; 
 	}
