more sane dom layout for front page (so skip link works)

--- a/assets/styles/layout/_layout.scss
+++ b/assets/styles/layout/_layout.scss
@@ -1,4 +1,6 @@
-// .site-header, .site-content {
-// 	@include outer-container;
-// }
-
+.site-main {
+	margin-top: 60px;
+}
+.home .site-main {
+	margin-top: 0;
+}
