--- a/assets/styles/site/primary/_posts-and-pages.scss
+++ b/assets/styles/site/primary/_posts-and-pages.scss
@@ -39,8 +39,14 @@
 	border-bottom: 3px solid #f00;
 }
 
+.byline,
 .updated:not(.published){
 	display: none;
+}
+
+.single .byline,
+.group-blog .byline {
+	display: inline;
 }
 
 .page-content,
