--- a/assets/styles/navigation/_links.scss
+++ b/assets/styles/navigation/_links.scss
@@ -1,13 +1,13 @@
 a {
-	color: $color__link;
+	color: $color-primary;
 
 	&:visited {
-		color: $color__link-visited;
+		color: darken($color-primary, 10%);
 	}
 	&:hover,
 	&:focus,
 	&:active {
-		color: $color__link-hover;
+		color: lighten($color-primary, 10%);
 	}
 	&:focus {
 		outline: thin dotted;
