--- a/assets/styles/site/_front-page.scss
+++ b/assets/styles/site/_front-page.scss
@@ -72,7 +72,7 @@
 	z-index: -100;
 	width: 100%;
 	height: 100vh;
-	background: #f00;
+	background: $color-primary;
 	video { 
 		width: auto;
 		min-width: 100%;
