render post featured image

--- a/assets/styles/media/_media.scss
+++ b/assets/styles/media/_media.scss
@@ -14,6 +14,11 @@ object {
 	max-width: 100%;
 }
 
+// Featured image
+.wp-post-image { 
+	width: 100%;
+}
+
 /*--------------------------------------------------------------
 ## Captions
 --------------------------------------------------------------*/
