--- a/assets/styles/site/primary/_posts-and-pages.scss
+++ b/assets/styles/site/primary/_posts-and-pages.scss
@@ -11,6 +11,10 @@
 			padding-left: 0;
 			@include span-columns(9);
 			@include shift(3);
+			.page & {
+				padding-left: $gutter;
+				@include shift(0);
+			}
 		}
 	}
 	.entry-meta {
@@ -70,4 +74,11 @@
 	display: block;
 	margin: 10px 0;
 	font-size: modular-scale(-1);
+}
+
+// Search results
+
+.search .content-area {
+	@include outer-container;
+	padding: 0 $gutter;
 }
