--- a/assets/styles/typography/_icon-font.scss
+++ b/assets/styles/typography/_icon-font.scss
@@ -26,4 +26,11 @@
 	&user:before { content: '\EA06'; }
 	&comments:before { content: '\EA07'; }
 	&calendar-o:before { content: '\EA08'; }
+
+	// section.intro
+	&creative-cloud:before { content: '\EA09'; }
+	&gulp:before { content: '\EA0A'; }
+	&php:before { content: '\EA0B'; }
+	&ubuntu:before { content: '\EA0C'; }
+	&wordpress:before { content: '\EA0D'; }
 }
