--- a/assets/styles/site/_front-page.scss
+++ b/assets/styles/site/_front-page.scss
@@ -89,11 +89,19 @@
 .intro {
 	background: $color-primary;
 	color: #fff;
+	.container {
+		@include media( $desktop ) {
+			.slogan, .statement {
+				@include span-columns(6);
+				padding: $gutter;
+			}
+		}
+		.slogan img {
+			padding: $gutter 0;
+		}
+	}
 }
-.statement {
-	@include outer-container;
-	padding: $gutter;
-}
+
 .technologies {
 	@include outer-container;
 	padding: 0 $gutter;
