styled more-link

--- a/assets/styles/navigation/_links.scss
+++ b/assets/styles/navigation/_links.scss
@@ -17,3 +17,21 @@ a {
 		outline: 0;
 	}
 }
+
+.more-link {
+	display: inline-block;
+	background: $color-primary;
+	color: #fff;
+	padding: 10px;
+	text-decoration: none;
+	font-weight: bold;
+	font-family: 'Roboto', sans-serif;
+	transition: background-color 0.3s;
+	&:hover, &:active {
+		color: #fff;
+		background: lighten( $color-primary, 10% );
+	}
+	&:visited {
+		color: #fff;
+	}
+}
