--- a/assets/styles/navigation/_menus.scss
+++ b/assets/styles/navigation/_menus.scss
@@ -18,6 +18,11 @@ p.site-title {
 	padding: 10px 20px;
 	text-decoration: none;
 	line-height: 1;
+	transition: background-color 0.3s;
+	&:hover {
+		background: lighten( $color-primary, 10% );
+	}
+
 	&:before {
 		font: normal normal normal 32px/1 'kanec-icons'; 
 		content: '\EA01'; 
@@ -89,8 +94,9 @@ p.site-title {
 		color: #fff;
 		padding: 10px 20px;
 		line-height: 32px;
+		transition: background-color 0.3s;
 		&:hover {
-			background: #555;
+			background: lighten( $color-primary, 10% );
 		}
 	}
 
