Pull real blog posts for front page

--- a/assets/styles/site/_front-page.scss
+++ b/assets/styles/site/_front-page.scss
@@ -124,6 +124,12 @@
 
 .portfolio {
 	@include outer-container;
+	header {
+		padding: 0 $gutter;
+		.icon {
+			color: $color-primary;
+		}
+	}
 	article {
 		@include media( $desktop ) {
 			padding: $gutter;
