--- a/assets/styles/typography/_icon-font.scss
+++ b/assets/styles/typography/_icon-font.scss
@@ -26,6 +26,9 @@
 	&user:before { content: '\EA06'; }
 	&comments:before { content: '\EA07'; }
 	&calendar-o:before { content: '\EA08'; }
+	&briefcase:before { content: '\EA09'; }
+	&paper-plane:before { content: '\EA0A'; }
+
 
 	// section.intro
 	&creative-cloud:before { content: '\EA09'; }
