--- a/assets/styles/typography/_headings.scss
+++ b/assets/styles/typography/_headings.scss
@@ -6,13 +6,13 @@ h1, h2, h3, h4, h5, h6 {
 	clear: both;
 }
 
-h1 { font-size: modular-scale(4); }
+h1 { font-size: ms(4); }
 
-h2 { font-size: modular-scale(3); }
+h2 { font-size: ms(3); }
 
-h3 { font-size: modular-scale(2); }
+h3 { font-size: ms(2); }
 
-h4 { font-size: modular-scale(1); }
+h4 { font-size: ms(1); }
 
-small { font-size: modular-scale(-1); }
+small { font-size: ms(-1); }
 
