--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -3,18 +3,30 @@
 $color-primary: #DA002E;
 
 @import 'normalize';
-@import 'bourbon';
-@import 'neat-helpers';
+@import '../../bower_components/modular-scale/stylesheets/modular-scale';
+@import '../../bower_components/compass-breakpoint/stylesheets/breakpoint';
+@import '../../bower_components/susy/sass/susy';
 
-$grid-columns: 4 !global;
-$modular-scale-ratio: $augmented-fourth;
-$max-width: em(1170);
-$desktop: new-breakpoint(min-width 37.5em 12);
-// $visual-grid: true;
+// Modular scale
+$ms-base: 1em;
+$ms-ratio: $augmented-fourth;
 
-@import 'neat';
+// Susy Grid
+$susy: (
+	container: 1170em/16,
+	columns: 12,
+	gutters: 1/3,
+	gutter-position: inside
+	);
+// $total-columns: 4; //Mobile first
+// $column-width   : 4em;
+$gutter-width   : 1em; 
+// $grid-padding   : $gutter-width;
 
-@import 'variables-site/variables-site';
+$bp-desktop: 37.5em;
+// $max-width: em(1170);
+
+@import 'variables-site/variables-site'; // That is mostly unused. 
 @import 'mixins/mixins-master';
 
 
