--- a/assets/styles/mixins/_mixins-master.scss
+++ b/assets/styles/mixins/_mixins-master.scss
@@ -10,3 +10,15 @@
 	margin-left: auto;
 	margin-right: auto;
 }
+
+// Clearfix
+@mixin clearfix() {
+	content: "";
+	display: table;
+	table-layout: fixed;
+}
+
+// Clear after (not all clearfix need this also)
+@mixin clearfix-after() {
+	clear: both;
+}
