--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -18,13 +18,8 @@ $susy: (
 	gutters: 1/3,
 	gutter-position: inside
 	);
-// $total-columns: 4; //Mobile first
-// $column-width   : 4em;
-$gutter-width   : 1em; 
-// $grid-padding   : $gutter-width;
 
-$bp-desktop: 37.5em;
-// $max-width: em(1170);
+$bp-desktop: 768px;
 
 @import 'variables-site/variables-site'; // That is mostly unused. 
 @import 'mixins/mixins-master';
