--- a/assets/styles/navigation/_menus.scss
+++ b/assets/styles/navigation/_menus.scss
@@ -8,7 +8,6 @@
 }
 p.site-title {
 	margin: 0;
-	margin-left: $gutter-width;
 	float: left;
 }
 .site-title a {
@@ -34,7 +33,6 @@ p.site-title {
 	display: block;
 	float: left;
 	width: 100%;
-	margin: 0 $gutter-width;
 	background: $color-primary;
 	ul {
 		display: none;
@@ -118,7 +116,7 @@ p.site-title {
 }
 
 // Desktop
-@media screen and (min-width: 37.5em) {
+@include susy-breakpoint( $bp-desktop ) {
 	.menu-toggle {
 		display: none;
 	}
