--- a/assets/styles/typography/_icon-font.scss
+++ b/assets/styles/typography/_icon-font.scss
@@ -28,7 +28,7 @@
 	&calendar-o:before { content: '\EA08'; }
 	&briefcase:before { content: '\EA09'; }
 	&paper-plane:before { content: '\EA0A'; }
-
+	&bars:before { content: '\EA0B'; }
 
 	// section.intro
 	&creative-cloud:before { content: '\EA09'; }
