--- a/assets/styles/forms/_buttons.scss
+++ b/assets/styles/forms/_buttons.scss
@@ -3,7 +3,7 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"] {
 	border: none;
-	border-radius: .3em;
+	border-radius: 0;
 	background: $color-primary;
 	// box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
 	color: #fff;
@@ -13,13 +13,11 @@ input[type="submit"] {
 	// text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
 
 	&:hover {
-		border-color: $color__border-button-hover;
-		// box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
+		background: lighten( $color_primary, 10% );
 	}
 
 	&:active,
 	&:focus {
-		border-color: $color__border-button-focus;
-		box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
+
 	}
 }
