--- a/assets/styles/navigation/_menus.scss
+++ b/assets/styles/navigation/_menus.scss
@@ -1,7 +1,8 @@
 .site-header {
 	position: fixed;
 	top: 0;
-	width: 100%;
+	left: gutter();
+	right: gutter();
 	.admin-bar & {
 		top: 32px; // WP Admin bar / logged in users
 	}
