--- a/assets/styles/navigation/_menus.scss
+++ b/assets/styles/navigation/_menus.scss
@@ -13,9 +13,9 @@
 	color: #fff;
 	background: $color-primary;
 	color: #fff;
-	font-size: 2em;
+	font-size: 32px;
 	line-height: 1;
-	padding: .2em 1em;
+	padding: 10px 32px;
 	text-decoration: none;
 	transition: background-color 0.3s;
 
@@ -91,8 +91,8 @@
 		display: block;
 		text-decoration: none;
 		color: #fff;
-		padding: .6em 1em;
-		line-height: 32px;
+		padding: 17px 18px;
+		line-height: 1;
 		transition: background-color 0.3s;
 		&:hover {
 			background: lighten( $color-primary, 10% );
@@ -111,11 +111,14 @@
 }
 
 /* Small menu. */
-.menu-toggle,
+.menu-toggle {
+	float: right;
+	font-size: 18px;
+	padding: 17px 21px; // To match height of .site-title
+}
 .main-navigation.toggled ul {
 	display: block;
 	color: #fff;
-	font-size: 18px;
 	float: right;
 }
 
