--- a/assets/styles/forms/_fields.scss
+++ b/assets/styles/forms/_fields.scss
@@ -4,12 +4,12 @@ input[type="url"],
 input[type="password"],
 input[type="search"],
 textarea {
-	color: $color__text-input;
-	border: 1px solid $color__border-input;
+	color: $color-grey-d;
+	border: 1px solid $color-grey-m;
 	border-radius: 3px;
 
 	&:focus {
-		color: $color__text-input-focus;
+		color: $color-text-black;
 	}
 }
 
